--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Adjust the margins so that the image and text are centered on the page.
   <body>
   
     <div>
-          <img src="./assets/images/walking.jpg" height="400px" width="600px"/>
+          <img src="./walking.jpg" height="400px" width="600px"/>
               <h1>
                   Keep Walking
               </h1>
